Update 'go-jvydvyap' component image to: quay.io/rhtap_qe/go-jvydvyap:9b9a6d41289064e01d43561f1200dd344b857b03@sha256:69f8c13f0af25cdd8a7b61da5b192ecb907dfd3b77bef8d4e696b8de4ea6ddb1

--- a/components/go-jvydvyap/overlays/development/deployment-patch.yaml
+++ b/components/go-jvydvyap/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-jvydvyap
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-jvydvyap:9b9a6d41289064e01d43561f1200dd344b857b03@sha256:69f8c13f0af25cdd8a7b61da5b192ecb907dfd3b77bef8d4e696b8de4ea6ddb1
+          name: container-image
